<?xml version="1.0" encoding="utf-8"?>
<layout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools">

	<data>

		<variable
			name="view"
			type="cz.vutbr.fit.brnogo.ui.routes.RoutesView"/>

		<variable
			name="viewModel"
			type="cz.vutbr.fit.brnogo.ui.routes.RoutesViewModel"/>
	</data>

	<FrameLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:background="@color/grey_200"
			android:orientation="vertical">

			<android.support.v7.widget.CardView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_margin="@dimen/d2"
				>

				<android.support.constraint.ConstraintLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					>

					<ImageView
						android:id="@+id/image_view_from"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginStart="8dp"
						android:layout_marginTop="8dp"
						android:tint="@color/colorPrimary"
						app:layout_constraintBottom_toBottomOf="@+id/text_input_layout_from"
						app:layout_constraintEnd_toStartOf="@+id/text_input_layout_from"
						app:layout_constraintHorizontal_bias="0.5"
						app:layout_constraintStart_toStartOf="parent"
						app:layout_constraintTop_toTopOf="@+id/text_input_layout_from"
						app:srcCompat="@drawable/ic_person_pin_circle"/>

					<android.support.design.widget.TextInputLayout
						android:id="@+id/text_input_layout_from"
						android:layout_width="0dp"
						android:layout_height="wrap_content"
						android:layout_marginBottom="8dp"
						android:layout_marginEnd="8dp"
						android:layout_marginStart="8dp"
						android:layout_marginTop="8dp"
						android:gravity="bottom"
						app:layout_constraintBottom_toTopOf="@+id/text_input_layout_to"
						app:layout_constraintEnd_toEndOf="parent"
						app:layout_constraintHorizontal_bias="0.5"
						app:layout_constraintStart_toEndOf="@+id/image_view_from"
						app:layout_constraintTop_toTopOf="parent">

						<AutoCompleteTextView
							android:id="@+id/auto_text_view_from"
							style="@style/TextRegular.MediumRed.14"
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:hint="@string/start"/>
					</android.support.design.widget.TextInputLayout>

					<ImageView
						android:id="@+id/image_view_dots"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginStart="8dp"
						android:tint="@color/grey_400"
						app:layout_constraintBottom_toTopOf="@+id/image_view_to"
						app:layout_constraintStart_toStartOf="parent"
						app:layout_constraintTop_toBottomOf="@+id/image_view_from"
						app:srcCompat="@drawable/ic_more"/>

					<ImageView
						android:id="@+id/image_view_switch"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginBottom="8dp"
						android:layout_marginEnd="8dp"
						android:layout_marginStart="8dp"
						android:layout_marginTop="8dp"
						android:background="?selectableItemBackgroundBorderless"
						android:tint="@color/colorPrimary"
						app:layout_constraintBottom_toTopOf="@+id/image_view_to"
						app:layout_constraintEnd_toEndOf="parent"
						app:layout_constraintHorizontal_bias="1.0"
						app:layout_constraintStart_toEndOf="@+id/image_view_dots"
						app:layout_constraintTop_toBottomOf="@+id/image_view_from"
						app:srcCompat="@drawable/ic_swap"/>

					<ImageView
						android:id="@+id/image_view_to"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginStart="8dp"
						android:layout_marginTop="8dp"
						android:tint="@color/green_500"
						app:layout_constraintBottom_toBottomOf="@+id/text_input_layout_to"
						app:layout_constraintEnd_toStartOf="@+id/text_input_layout_to"
						app:layout_constraintHorizontal_bias="0.5"
						app:layout_constraintHorizontal_chainStyle="spread"
						app:layout_constraintStart_toStartOf="parent"
						app:layout_constraintTop_toTopOf="@+id/text_input_layout_to"
						app:srcCompat="@drawable/ic_place"/>

					<android.support.design.widget.TextInputLayout
						android:id="@+id/text_input_layout_to"
						android:layout_width="0dp"
						android:layout_height="wrap_content"
						android:layout_marginBottom="8dp"
						android:layout_marginEnd="8dp"
						android:layout_marginStart="8dp"
						app:layout_constraintBottom_toTopOf="@+id/button_advanced"
						app:layout_constraintEnd_toEndOf="parent"
						app:layout_constraintHorizontal_bias="0.5"
						app:layout_constraintStart_toEndOf="@+id/image_view_to">

						<android.support.design.widget.TextInputEditText
							android:id="@+id/auto_text_view_to"
							style="@style/TextRegular.MediumRed.14"
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:hint="@string/destination"/>
					</android.support.design.widget.TextInputLayout>

					<Button
						android:id="@+id/button_advanced"
						style="@style/ButtonWhiteBorderlessStyle"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_margin="@dimen/d2"
						android:layout_marginBottom="8dp"
						android:layout_marginEnd="8dp"
						android:layout_marginStart="8dp"
						android:text="@string/advanced"
						app:layout_constraintBottom_toTopOf="@+id/button_find_route"
						app:layout_constraintEnd_toEndOf="parent"
						app:layout_constraintStart_toStartOf="parent"
						/>

					<Button
						android:id="@+id/button_find_route"
						style="@style/ButtonRedBorderlessStyle"
						android:layout_width="0dp"
						android:layout_height="wrap_content"
						android:text="@string/find_route"
						app:layout_constraintBottom_toBottomOf="parent"
						app:layout_constraintEnd_toEndOf="parent"
						app:layout_constraintStart_toStartOf="parent"/>
				</android.support.constraint.ConstraintLayout>


			</android.support.v7.widget.CardView>

			<TextView
				android:id="@+id/Favorites"
				style="@style/TextBold.Grey.AllCaps.14"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_margin="@dimen/d2"
				android:text="@string/favorite"/>
		</LinearLayout>

	</FrameLayout>

</layout>
